--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,11 @@
             android:name=".controller.activities.HomeActivity"
             android:label="@string/home_title"
             android:theme="@style/AppThemeWithActionBar"
-            android:windowSoftInputMode="adjustResize"/>
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".controller.activities.AddDeviceActivity"
+            android:label="@string/add_device_title"
+            android:theme="@style/AppThemeWithActionBar"/>
     </application>
 
 </manifest>
