--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,16 +26,16 @@
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".controller.activities.RegisterActivity"
-            android:label="@string/register_tittle"
+            android:label="@string/register_activity_tittle"
             android:theme="@style/AppThemeWithActionBar" />
         <activity
             android:name=".controller.activities.HomeActivity"
-            android:label="@string/home_title"
+            android:label="@string/home_activity_title"
             android:theme="@style/AppThemeWithActionBar"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".controller.activities.AddDeviceActivity"
-            android:label="@string/add_device_title"
+            android:label="@string/add_device_activity_title"
             android:theme="@style/AppThemeWithActionBar"/>
     </application>
 
