--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.terralogic.alexle.ott">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -35,7 +37,7 @@
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".controller.activities.AddDeviceActivity"
-            android:label="@string/add_device_activity_title"
+            android:label="@string/config_device_fragment_title"
             android:theme="@style/AppThemeWithActionBar"/>
     </application>
 
